--- a/style.css
+++ b/style.css
@@ -1,40 +1,76 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #fafafa;
-    color: #4c4e61;
+  text-align: center;
+  font-family: "Poppins";
+  font-size: 15px;
+  color: hsl(234, 12%, 34%);
 }
-h2 {
-    font-weight: 50;
-}
-.section-header {
-    text-align: center;
-    padding: 20px;
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.card{
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px #0000;
-    padding: 40px;
-    margin: 20px;
-    text-align: start;
-    box-shadow: #4c4e6133 0px 10px 15px -3px;
+.light {
+  font-size: 2em;
+  font-weight: 200;
 }
-.t-line {
-    border-top: 2px solid #ff0000;
+.bold {
+  font-size: 2em;
+  font-weight: 600;
 }
-.card img {
-    width: 80px;
-    margin: 20px;
-    align-items: end;
+p {
+  max-width: 500px;
+  font-weight: 400;
 }
-.card-image {
+.container {
+  display: grid;
+  gap: 2em;
+  grid-template-columns: 1fr;
+  padding: 2em;
+}
+
+.container img {
+  align-self: flex-end;
+  justify-self: flex-end;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  align-items: flex-start;
+  background-color: white;
+  border-radius: 5px;
+  padding: 1em 1.5em;
+  box-shadow: 2px 2px 100px 0px rgba(67, 67, 67, 0.407);
+}
+.c1 .card {
+  border-top: 5px solid hsl(180, 62%, 55%);
+}
+.c2 {
+  border-top: 5px solid hsl(0, 78%, 62%);
+}
+.c3 {
+  border-top: 5px solid hsl(34, 97%, 64%);
+}
+.c4 .card {
+  border-top: 5px solid hsl(212, 86%, 64%);
+}
+.card span {
+  font-weight: 600;
+}
+@media screen and (min-width: 900px) {
+  .container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .c1 {
+    grid-row: 1/3;
     display: flex;
-    justify-content: right;
-    align-items: right;
+    align-items: center;
+  }
+  .c4 {
+    display: flex;
+    align-items: center;
+    grid-column: 3;
+    grid-row: 1/3;
+  }
 }
